; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_mixer.c_mixer_commit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_mixer.c_mixer_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mixer_context = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.drm_display_mode }
%struct.drm_display_mode = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mixer_context*)* @mixer_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mixer_commit(%struct.mixer_context* %0) #0 {
  %2 = alloca %struct.mixer_context*, align 8
  %3 = alloca %struct.drm_display_mode*, align 8
  store %struct.mixer_context* %0, %struct.mixer_context** %2, align 8
  %4 = load %struct.mixer_context*, %struct.mixer_context** %2, align 8
  %5 = getelementptr inbounds %struct.mixer_context, %struct.mixer_context* %4, i32 0, i32 0
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  store %struct.drm_display_mode* %10, %struct.drm_display_mode** %3, align 8
  %11 = load %struct.mixer_context*, %struct.mixer_context** %2, align 8
  %12 = load %struct.drm_display_mode*, %struct.drm_display_mode** %3, align 8
  %13 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.drm_display_mode*, %struct.drm_display_mode** %3, align 8
  %16 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @mixer_cfg_scan(%struct.mixer_context* %11, i32 %14, i32 %17)
  %19 = load %struct.mixer_context*, %struct.mixer_context** %2, align 8
  %20 = load %struct.drm_display_mode*, %struct.drm_display_mode** %3, align 8
  %21 = call i32 @mixer_cfg_rgb_fmt(%struct.mixer_context* %19, %struct.drm_display_mode* %20)
  %22 = load %struct.mixer_context*, %struct.mixer_context** %2, align 8
  %23 = call i32 @mixer_run(%struct.mixer_context* %22)
  ret void
}

declare dso_local i32 @mixer_cfg_scan(%struct.mixer_context*, i32, i32) #1

declare dso_local i32 @mixer_cfg_rgb_fmt(%struct.mixer_context*, %struct.drm_display_mode*) #1

declare dso_local i32 @mixer_run(%struct.mixer_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
